# redblue

./: .gitignore  BUILD_SUCCESS.md  CHANGELOG.md  CRYPTO_INTEGRATION_COMPLETE.md  CRYPTO_PROGRESS.md  CRYPTO_STATUS_FINAL.md  Cargo.toml  GEMINI.md  HTTPS_IMPLEMENTATION_COMPLETE.md  HTTPS_ROADMAP.md  INTELLIGENCE.md  KEBAB_CASE_RENAME_STATUS.md  Makefile  NETCAT-IMPLEMENTATION-SUMMARY.md  README.md  REVERSE_SHELL_ROADMAP.md  TLS_STATUS.md  build.rs  docker-compose.ctf.yml  install.sh  libmod.rlib  scan-ctf.sh  test-tls-google.sh  test_handshake.sh  test_tls_connection.rs  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: alpha-release.yml  ci.yml  next-release.yml  release.yml
docker/vulnerable-lab/: README.md  docker-compose.yml  redteam-walkthrough.md
docs/: .redblue.example.yaml  CLI-SEMANTICS.md  NETCAT-ULTIMATE.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  apply_gcm_final.py  c2-agent.md  cli-aliases.md  cli-commands.md  cli-semantics.md  custom.css  hkdf-bug-analysis.md  http3-implementation-report.md  http3-testing-guide.md  index.html  index.md  netcat-ultimate.md  next-steps-server-initial-parser.md  parity_matrix.md  passive-fingerprinting.md  quic-implementation-status.md  recon-advanced.py  self-replication.md  update_tls_gcm.py
docs/domains/: BENCH.md  CLOUD.md  CODE.md  COLLECTION.md  DATABASE.md  DNS.md  EXPLOIT.md  NETWORK.md  README.md  RECON.md  TLS.md  WEB.md  access.md  auth.md  bench.md  cloud.md  code.md  collection.md  crypto.md  database.md  dns.md  exploit.md  index.md  mcp.md  nc.md  network.md  recon.md  tls.md  web.md  wordlist.md
docs/examples/: aes256_gcm_vector.rs  binary_db_demo.rs  reddb_demo.rs  test-chacha20-rfc8439.rs  test-decrypt-manual.rs  test-poly1305-manual.rs  test_aes_crate.rs  test_aes_roundtrip.rs  test_google_actual_decrypt.rs  test_google_decrypt.rs  test_tls_ecdhe.rs  tls12-google-test.rs  tls13-debug.rs  tls13-google-test.rs  tls13-localhost-test.rs  tls13-simple-test.rs  ui-graphs-demo.rs  ui-load-dashboard.rs  ui-tls-timing.rs  x25519_check.rs
docs/getting-started/: installation.md  quickstart.md
docs/guides/: index.md  self-replication.md  ui-graphs-integration.md
docs/reference/: configuration.md  tool-equivalents.md
examples/: CONFIG.md  connection_intelligence.rs  test_darkweb.rs  test_gzip.rs  test_gzip_large.rs  test_gzip_real.rs  test_http2_live.rs  test_passwords.rs  test_rockyou75.rs  tls10_handshake.rs
openspec/: project.md
scripts/: analyze_quic_packet.py  build-embeddings.py  capture-openssl-keys.sh  compare-with-openssl.sh  release.sh  setup-tls13-server.sh  test-tls13-localhost.sh
src/: error.rs  lib.rs  main.rs
src/accessors/: file.rs  mod.rs  network.rs  process.rs  (+2 more)
tests/: NETCAT-FINAL-REPORT.md  accessors_test.rs  aes128_gcm_basic.rs  aes128_gcm_nist.rs  aes256_core_test.rs  aes256_debug.rs  aes256_gcm_nist.rs  aes256_matrix_test.rs  aes_gcm_tls13_style.rs  chacha20_roundtrip.rs  chacha20_test_vectors.rs  compare_hkdf.rs  crypto_integration_test.rs  gmul_test.rs  hkdf_test.rs  hpack_standalone.rs  http2_live_test.rs  https_handshake_test.rs  netcat-ctf-tests.md  netcat-test-results.md  playbook_execution_test.rs  poly1305_debug.rs  poly1305_standalone.rs  rfc8448_encrypted_extensions.rs  scan_types_test.rs  sha256_test.rs  storage_roundtrip.rs  test_auth_integration.rs  test_cms_integration.rs  test_cms_scanning_integration.rs  test_collection_integration.rs  test_dns_sources_integration.rs  test_http2_google.rs  test_osint_integration.rs  test_osint_scanning_integration.rs  test_parity_comparison.rs  test_performance_benchmarks.rs  test_port_scanning_integration.rs  test_recon_integration.rs  test_screenshots_integration.rs  (+9 more)
(+782 files in other folders)
