[package]
name = "redblue"
version = "0.1.0"
edition = "2021"
authors = ["RedBlue Security Team"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[dependencies]
# ZERO PROTOCOL DEPENDENCIES - Everything implemented from scratch
#
# We implement ALL protocols ourselves (DNS, HTTP, TLS, SOCKS, etc.)
# NEVER add: hyper, reqwest, trust-dns, tokio, openssl, or similar
#
# EXCEPTION: libc for raw syscall access (PTY, terminal control, advanced socket options)
# - libc is FFI bindings to kernel syscalls, NOT external protocol implementations
# - Rust std internally uses libc too (std::net, std::fs, std::process all use it)
# - Required for features impossible with Rust std alone (PTY allocation, ioctl, termios)
#
libc = "0.2"  # FFI to kernel syscalls (PTY/terminal/socket options)

# TLS 1.3 + HTTP/2 client leverages vendored OpenSSL bindings committed under docs/
openssl = { path = "docs/rust-openssl/openssl", features = ["vendored"] }
